--- a/conf/kubernetes.conf
+++ b/conf/kubernetes.conf
@@ -8,7 +8,7 @@
 <source>
   @type tail
   @id in_tail_container_logs
-  path /var/log/containers/*.log
+  path /var/log/docker/containers/*/*.log
   pos_file /var/log/fluentd-containers.log.pos
   tag "#{ENV['FLUENT_CONTAINER_TAIL_TAG'] || 'kubernetes.*'}"
   read_from_head true
