--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -5,11 +5,12 @@
 @include kubernetes.conf
 
 <match **>
-  @type forward
-  @id out_fwd
-  @log_level info
-  <server>
-    host "#{ENV['FLUENT_FOWARD_HOST']}"
-    port "#{ENV['FLUENT_FOWARD_PORT']}"
-  </server>
+  @type cloudwatch_logs
+  @id out_cloudwatch_logs
+  log_group_name "#{ENV['LOG_GROUP_NAME']}"
+  auto_create_stream true
+  use_tag_as_stream true
+  retention_in_days "#{ENV['RETENTION_IN_DAYS'] || 'nil'}"
+  json_handler yajl # To avoid UndefinedConversionError
+  log_rejected_request "#{ENV['LOG_REJECTED_REQUEST']}" # Log rejected request for missing parts
 </match>
