--- a/conf/containers.conf
+++ b/conf/containers.conf
@@ -29,7 +29,7 @@
   <match **>
     @type cloudwatch_logs
     @id out_cloudwatch_logs_containers
-    region "#{ENV.fetch('REGION')}"
+    region "#{ENV.fetch('AWS_REGION')}"
     log_group_name "/eks/#{ENV.fetch('CLUSTER_NAME')}/containers/windows"
     log_stream_name_key stream_name
     remove_log_stream_name_key true
