--- a/conf/containers.conf
+++ b/conf/containers.conf
@@ -2,7 +2,7 @@
   @type tail
   @id in_tail_container_logs
   @label @containers
-  path /var/lib/docker/containers/*/*.log
+  path /var/log/containers/*.log
   pos_file /var/log/fluentd-containers.log.pos
   tag *
   read_from_head true
