Parse docker json

--- a/conf/containers.conf
+++ b/conf/containers.conf
@@ -2,7 +2,7 @@
   @type tail
   @id in_tail_container_logs
   @label @containers
-  path /var/log/containers/*.log
+  path /var/log/containers/dm-*.log
   pos_file /var/log/fluentd-containers.log.pos
   tag *
   read_from_head true
@@ -24,6 +24,20 @@
     <record>
       stream_name ${tag_parts[3]}
     </record>
+  </filter>
+
+  <filter **>
+    @type parser
+    <parse>
+      @type json
+      json_parser json
+      time_format "%Y-%m-%dT%H:%M:%S.%N%z"
+    </parse>
+    replace_invalid_sequence true
+    emit_invalid_record_to_error false
+    key_name log
+    reserve_data false
+    reserve_time false
   </filter>
 
   <match **>
